--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@shopify/react-native-skia": "^1.4.2",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
     "graphql": "^16.9.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-dotenv": "^3.4.11",
@@ -25,7 +27,9 @@
     "react-native-reanimated": "^3.15.2",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.7.1"
+    "react-native-svg": "^15.7.1",
+    "react-native-webview": "^13.12.3",
+    "victory-native": "^41.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
