--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-native": "0.75.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-notifier": "^2.0.0",
     "react-native-reanimated": "^3.15.2",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-svg": "^15.7.1",
     "react-native-webview": "^13.12.3",
     "victory-native": "^41.6.0"
